
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(SimpleFactory LANGUAGES CXX)

# include_directories(../)

add_executable(01_calculator_console 01_calculator_console.cpp)
add_executable(02_calculator_console_1 02_calculator_console_1.cpp)
add_executable(03_calculator_console_2 03_calculator_console_2.cpp)
add_executable(04_calculator_console_3 04_calculator_console_3.cpp)
