
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(Strategy LANGUAGES CXX)

# include_directories(../)

add_executable(01_store_cashier_system 01_store_cashier_system.cpp)
add_executable(02_store_cashier_system_1 02_store_cashier_system_1.cpp)
add_executable(03_store_cashier_system_2 03_store_cashier_system_2.cpp)
add_executable(04_strategy 04_strategy.cpp)
add_executable(05_store_cashier_system_3 05_store_cashier_system_3.cpp)
add_executable(06_store_cashier_system_4 06_store_cashier_system_4.cpp)
