
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(Strategy LANGUAGES CXX)

# include_directories(../)

add_executable(01_wear_person 01_wear_person.cpp)
add_executable(02_wear_person_1 02_wear_person_1.cpp)
add_executable(03_decorator 03_decorator.cpp)
add_executable(04_wear_person_2 04_wear_person_2.cpp)
