
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(Strategy LANGUAGES CXX)

# include_directories(../)

add_executable(01_factory_method 01_factory_method.cpp)
add_executable(02_leifeng_factory 02_leifeng_factory.cpp)
add_executable(03_leifeng_factory_1 03_leifeng_factory_1.cpp)
add_executable(04_leifeng_factory_2 04_leifeng_factory_2.cpp)
