
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(Strategy LANGUAGES CXX)

# include_directories(../)

add_executable(01_test_paper 01_test_paper.cpp)
add_executable(02_test_paper_1 02_test_paper_1.cpp)
add_executable(03_test_paper_2 03_test_paper_2.cpp)
add_executable(04_template_method 04_template_method.cpp)
