
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(Singleton LANGUAGES CXX)

# include_directories(../)

add_executable(01_handset_game 01_handset_game.cpp)
add_executable(02_handset_game_1 02_handset_game_1.cpp)
add_executable(03_handset_game_2 03_handset_game_2.cpp)
add_executable(04_handset_game_3 04_handset_game_3.cpp)
add_executable(05_handset_game_4 05_handset_game_4.cpp)
add_executable(06_bridge 06_bridge.cpp)
