
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(Singleton LANGUAGES CXX)

# include_directories(../)

add_executable(01_barbecuer 01_barbecuer.cpp)
add_executable(02_barbecuer_1 02_barbecuer_1.cpp)
add_executable(03_barbecuer_2 03_barbecuer_2.cpp)
add_executable(04_command 04_command.cpp)
